--- a/Views/Home/Outsourcing.cshtml
+++ b/Views/Home/Outsourcing.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-@* POS Banner *@
+@* Outsourcing Banner *@
 <div class="ml-main-section" style="background-image: url(/Assets/img/banner-bg.jpg)">
     <div class="container">
         <div class="row">
@@ -44,5 +44,102 @@
     </div>
     <div class="shape8 rotateme">
         <img src="../assets/img/shape2.svg" alt="shape" />
+    </div>
+</div>
+
+<div class="services-area-two pt-80 pb-50 bg-f9f6f6">
+    <div class="container">
+        @* Section Title: Outsourcing Services *@
+        <div class="section-title" style="margin-top: 0;">
+            <h2>Our Outsourcing Services</h2>
+            <div class="bar"></div>
+            <p>Our commitment to excellence and customer satisfaction has earned us the trust of numerous clients across various industries.</p>
+        </div>
+        @* Services *@
+        <div class="row justify-content-center">
+            @* Back Office Support *@
+            <div class="col-lg-4 col-sm-6">
+                <div class="single-services-box" style="height: 280px;">
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="3"></circle>
+                            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+                        </svg>
+                    </div>
+                    <h3><a href="/service-details/">Back Office Support</a></h3>
+                    <p>Outsourcing back office support allows businesses to focus on core activities while ensuring efficiency and accuracy in the day-to-day operations.</p>
+                </div>
+            </div>
+            @* Customer Service *@
+            <div class="col-lg-4 col-sm-6">
+                <div class="single-services-box" style="height: 280px;">
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                            <polyline points="22,6 12,13 2,6"></polyline>
+                        </svg>
+                    </div>
+                    <h3><a href="/service-details/">Customer Service</a></h3>
+                    <p>Customer service outsourcing entails providing support and assistance to customers for inquiries, complaints, and problem-solving.</p>
+                </div>
+            </div>
+            @* IT Support and Maintenance *@
+            <div class="col-lg-4 col-sm-6">
+                <div class="single-services-box" style="height: 280px;">
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                        </svg>
+                    </div>
+                    <h3><a href="/service-details/">IT Support and Maintenance</a></h3>
+                    <p>IT support and maintenance outsourcing involve managing and troubleshooting IT infrastructure, software, and hardware issues.</p>
+                </div>
+            </div>
+            @* Human Resources *@
+            <div class="col-lg-4 col-sm-6">
+                <div class="single-services-box" style="height: 280px;">
+                    <div class="icon bg-c679e3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="3" y="3" width="7" height="7"></rect>
+                            <rect x="14" y="3" width="7" height="7"></rect>
+                            <rect x="14" y="14" width="7" height="7"></rect>
+                            <rect x="3" y="14" width="7" height="7"></rect>
+                        </svg>
+                    </div>
+                    <h3><a href="/service-details/">Human Resources</a></h3>
+                    <p>Outsourcing HR tasks enables businesses to focus on strategic HR initiatives while ensuring compliance with labor laws and regulations.</p>
+                </div>
+            </div>
+            @* Data Entry and Management *@
+            <div class="col-lg-4 col-sm-6">
+                <div class="single-services-box" style="height: 280px;">
+                    <div class="icon bg-c679e3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <line x1="12" y1="16" x2="12" y2="12"></line>
+                            <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                        </svg>
+                    </div>
+                    <h3><a href="/service-details/">Data Entry and Management</a></h3>
+                    <p>Outsourcing data-related tasks can improve data accuracy and accessibility.</p>
+                </div>
+            </div>
+            @* Finance and Accounting *@
+            <div class="col-lg-4 col-sm-6">
+                <div class="single-services-box" style="height: 280px;">
+                    <div class="icon bg-c679e3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="22" y1="12" x2="2" y2="12"></line>
+                            <path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"></path>
+                            <line x1="6" y1="16" x2="6.01" y2="16"></line>
+                            <line x1="10" y1="16" x2="10.01" y2="16"></line>
+                        </svg>
+                    </div>
+                    <h3><a href="/service-details/">Finance and Accounting</a></h3>
+                    <p>Finance and accounting outsourcing encompass financial management tasks like bookkeeping, tax preparation, financial analysis, and auditing. </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
